se agregaron los ultimos 19 requerimientos, pantalla principal, semaforo, rediseño de forms

--- a/modules/Notebook_QA.ipynb
+++ b/modules/Notebook_QA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,158 +637,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <hr>\n",
-       "            <h1>Se ha iniciado los calculos del semaforo</h2>\n",
-       "            <small>se ha asignado el proyecto con el ventilador: 1200</small>\n",
-       "            <br>\n",
-       "\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <h3>valores del sensor - promediado en 10 minutos</h3>\n",
-       "    <table border=\"1\" cellpadding=\"5\" cellspacing=\"0\">\n",
-       "        <tr>\n",
-       "            <th>id</th><th>ts</th><th>pt2</th><th>ps2</th><th>densidad2</th><th>q2</th><th>pt1</th><th>ps1</th><th>densidad1</th><th>q1</th><th>lc</th><th>qf</th><th>k</th><th>tbs</th><th>hr</th><th>tbh</th><th>tgbh</th>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>5186.5</td><td>2024-10-28 08:33:36.322224128+00:00</td><td>1449.9999819881486</td><td>1179.9999982689772</td><td>90000.00000952973</td><td>79.99999671788412</td><td>1920.0000053635079</td><td>1609.9999895517867</td><td>90999.99999797076</td><td>4.539090684620454e-06</td><td>26.99999594770015</td><td>-9.73231843698019e-06</td><td>1.0374619497699613e-05</td><td>29.000002263434787</td><td>69.99999454329884</td><td>1.7263153098657992e-05</td><td>100.0000081139249</td>\n",
-       "        </tr>\n",
-       "    </table>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <h3>valores del VDF - promediado en 10 minutos</h3>\n",
-       "    <table border=\"1\" cellpadding=\"5\" cellspacing=\"0\">\n",
-       "        <tr>\n",
-       "            <th>ts</th><th>fref</th><th>freal</th><th>vf</th><th>oc</th><th>power</th><th>powerc</th><th>rpm</th>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>2024-10-28 08:33:36.391397888+00:00</td><td>50.00000295211672</td><td>49.99999704480679</td><td>119.9999963552518</td><td>1.0000135475254015</td><td>15.000006068686321</td><td>14.79998602564719</td><td>1494.3342135233586</td>\n",
-       "        </tr>\n",
-       "    </table>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <hr>\n",
-       "            <h1>Calculando punto de stall V5</h2>\n",
-       "            <small></small>\n",
-       "            <br>\n",
-       "\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: 0    0.298867\n",
-      "Name: caudal, dtype: float64 1: 0    1.211109e+08\n",
-      "Name: presion, dtype: float64\n",
-      "      caudal       presion\n",
-      "0   0.298867  1.211109e+08\n",
-      "1   5.827903  1.042041e+08\n",
-      "2  13.000708  8.770378e+07\n",
-      "3  21.368979  7.242268e+07\n",
-      "4  30.932718  5.348386e+07\n",
-      "5  37.059488  3.499210e+07\n",
-      "6  40.347024  1.769926e+07\n",
-      "7  44.531160  3.621134e+06\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <h3>Valores para la formula</h3>\n",
-       "    <table border=\"1\" cellpadding=\"5\" cellspacing=\"0\">\n",
-       "        <tr>\n",
-       "            <th>pt2</th><th>presion maxima curvaAjustada</th>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>1449.9999819881486</td><td>121110872.2484917</td>\n",
-       "        </tr>\n",
-       "    </table>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <fieldset border=\"1\" cellpadding=\"5\" cellspacing=\"0\">\n",
-       "            <legend>Resultado</legend>\n",
-       "            <p>1.1972500528384285e-05</p>\n",
-       "    </fieldset>\n",
-       "    \n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<hr>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from asgiref.sync import sync_to_async\n",
     "from applications.getdata.models import Proyecto\n",
@@ -807,6 +656,52 @@
     "await ejecutar_semaforo(project, semaforo)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paolita te Amo mi amor!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def decirle_a_paola_que_la_amo():\n",
+    "    print(\"Paolita te Amo mi amor!!\")\n",
+    "\n",
+    "\n",
+    "decirle_a_paola_que_la_amo()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# TAREA 1\n",
+    "# tarea 1: aca debe practicar hacer una funcion que permita escribir un mensaje\n",
+    "\n",
+    "def imprimirMensaje():\n",
+    "    print(\"Te amo mi ingeniero precioso\")\n",
+    "\n",
+    "# TAREA 2\n",
+    "# tarea 2: Escribir una funcion que permita sumar dos numeros y debe imprimir el resultado\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
